# opensubdiv-rs

./: Cargo.toml  README.md
opensubdiv/: Cargo.toml
opensubdiv-sys/: Cargo.toml  build.rs
opensubdiv-sys/osd-capi/: CMakeLists.txt
opensubdiv-sys/osd-capi/far/: primvar_refiner.cpp  stencil_table.cpp  stencil_table_factory.cpp  topology_level.cpp  topology_refiner.cpp  topology_refiner_factory.cpp
opensubdiv-sys/osd-capi/osd/: cpu_evaluator.cpp  cpu_vertex_buffer.cpp  cuda_evaluator.cpp  cuda_vertex_buffer.cpp
opensubdiv-sys/osd-capi/vtr/: types.hpp
opensubdiv-sys/src/: lib.rs
opensubdiv-sys/src/far/: mod.rs  primvar_refiner.rs  stencil_table.rs  stencil_table_factory.rs  topology_descriptor.rs  topology_level.rs  topology_refiner.rs  topology_refiner_factory.rs
opensubdiv-sys/src/osd/: buffer_descriptor.rs  cpu_evaluator.rs  cpu_vertex_buffer.rs  cuda_evaluator.rs  cuda_vertex_buffer.rs  mod.rs
opensubdiv-sys/src/sdc/: crease.rs  mod.rs  options.rs  types.rs
opensubdiv-sys/src/vtr/: types.rs
opensubdiv/examples/: far_tutorial_0.rs  osd_tutorial_0.rs  osd_tutorial_0_cuda.rs
opensubdiv/src/: lib.rs
opensubdiv/src/far/: mod.rs  primvar_refiner.rs  stencil_table.rs  stencil_table_factory.rs  topology_descriptor.rs  topology_level.rs  topology_refiner.rs  topology_refiner_factory.rs
opensubdiv/src/osd/: buffer_descriptor.rs  cpu_evaluator.rs  cpu_vertex_buffer.rs  cuda_evaluator.rs  cuda_vertex_buffer.rs  mod.rs
opensubdiv/src/sdc/: mod.rs
