[package]
name = "opensubdiv-sys"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
derive_more = "0.15.0"

[build-dependencies]
cmake = "0.1"
config="0.9"
